# OpenClawLauncher

./: .gitignore  CNAME  LICENSE  README.en.md  README.md  app-macos.spec  app.spec  index.html  logo.icns  pyproject.toml
.github/workflows/: release-pyinstaller.yml
scripts/: zip_release_asset.py
src/openclaw_launcher/: main.py
src/openclaw_launcher/core/: autostart_manager.py  config.py  install_manager.py  process_manager.py  runtime_manager.py  utils.py
src/openclaw_launcher/ui/: i18n.py  main_window.py  theme_manager.py
src/openclaw_launcher/ui/i18n/: en.json  zh.json
src/openclaw_launcher/ui/panels/: advanced_panel.py  ai_model_panel.py  backup_panel.py  dependency_panel.py  instance_panel.py  log_panel.py  onboard_panel.py  plugin_panel.py
